// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button(snapshot testing) Button sizes 1`] = `
<button
  class="sc-jzJRlG liQEDZ"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs jbxVbw"
    color="white"
    data-test="span"
    size="10"
  >
    my small button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 2`] = `
<button
  class="sc-jzJRlG jskDOY"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my default size(md) button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button sizes 3`] = `
<button
  class="sc-jzJRlG lpbvpn"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs doVAst"
    color="white"
    data-test="span"
    size="20"
  >
    my large button
  </span>
</button>
`;

exports[`Button(snapshot testing) Button-default 1`] = `
<button
  class="sc-jzJRlG jskDOY"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my simple button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 1`] = `
<button
  class="sc-jzJRlG peaJH"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 2`] = `
<button
  class="sc-jzJRlG peaJH"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs ghkjrx"
    color="blue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) blue Buttons 3`] = `
<button
  class="sc-jzJRlG peaJH"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 1`] = `
<button
  class="sc-jzJRlG cuoJGy"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 2`] = `
<button
  class="sc-jzJRlG cuoJGy"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs lmWkLj"
    color="darkblue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 3`] = `
<button
  class="sc-jzJRlG cuoJGy"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 4`] = `
<button
  class="sc-jzJRlG jskDOY"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 5`] = `
<button
  class="sc-jzJRlG jskDOY"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) darkblue Buttons(default) 6`] = `
<button
  class="sc-jzJRlG jskDOY"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 1`] = `
<button
  class="sc-jzJRlG gUWWuY"
  data-styletype="primary"
  data-test="button"
  disabled=""
  type="submit"
>
  <div
    class="sc-fjdhpX eDFlZt sc-cSHVUG iLCKLm"
  >
    <i
      class="sc-jTzLTM claoVk icon-watch-later"
      color="white"
      data-test="icon"
    />
  </div>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my blue iconic disabled primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 2`] = `
<button
  class="sc-jzJRlG kSlrbi"
  data-styletype="secondary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs dJtNTe"
    color="red"
    data-test="span"
    size="14"
  >
    my red disabled secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 3`] = `
<button
  class="sc-jzJRlG kggIox"
  data-styletype="tertiary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my disabled tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) disabled Buttons 4`] = `
<button
  class="sc-jzJRlG kggIox"
  data-styletype="primary"
  data-test="button"
  disabled=""
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my disabled primary linked-button
  </span>
</button>
`;

exports[`Button(snapshot testing) full-width button 1`] = `
<button
  class="sc-jzJRlG fAKehr"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my wide button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 1`] = `
<button
  class="sc-jzJRlG kSkGIH"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 2`] = `
<button
  class="sc-jzJRlG kSkGIH"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs fcTmNH"
    color="green"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) green Buttons 3`] = `
<button
  class="sc-jzJRlG kSkGIH"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) linked Buttons 1`] = `
<a
  class="sc-chPdSV dqReCj"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-jzJRlG jskDOY"
    data-styletype="primary"
    data-test="button"
    type="submit"
  >
    <span
      class="sc-htoDjs cemEaf"
      color="white"
      data-test="span"
      size="14"
    >
      my simplest linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) linked Buttons 2`] = `
<a
  class="sc-kAzzGY EsDnJ"
  href="https://sciencebusiness.net/categories/dfgdfg"
  target="_blank"
>
  <button
    class="sc-jzJRlG jskDOY"
    data-styletype="secondary"
    data-test="button"
    type="submit"
  >
    <div
      class="sc-fjdhpX eDFlZt sc-cSHVUG iLCKLm"
    >
      <i
        class="sc-jTzLTM ftCaFc icon-watch-later"
        color="darkBlue"
        data-test="icon"
      />
    </div>
    <span
      class="sc-htoDjs deFOOE"
      color="darkBlue"
      data-test="span"
      size="14"
    >
      my secoundrry external-linked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) linked Buttons 3`] = `
<a
  class="sc-chPdSV dqReCj"
  href="/avatar"
  target="_self"
>
  <button
    class="sc-jzJRlG jskDOY"
    data-styletype="tertiary"
    data-test="button"
    type="submit"
  >
    <div
      class="sc-fjdhpX eDFlZt sc-cSHVUG iLCKLm"
    >
      <i
        class="sc-jTzLTM ftCaFc icon-watch-later"
        color="darkBlue"
        data-test="icon"
      />
    </div>
    <span
      class="sc-htoDjs deFOOE"
      color="darkBlue"
      data-test="span"
      size="14"
    >
      my tertiary internal-liked button
    </span>
  </button>
</a>
`;

exports[`Button(snapshot testing) red Buttons 1`] = `
<button
  class="sc-jzJRlG eVFBeJ"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 2`] = `
<button
  class="sc-jzJRlG eVFBeJ"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs dJtNTe"
    color="red"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) red Buttons 3`] = `
<button
  class="sc-jzJRlG eVFBeJ"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 1`] = `
<button
  class="sc-jzJRlG bNeKZy"
  data-styletype="primary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs cemEaf"
    color="white"
    data-test="span"
    size="14"
  >
    my primary button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 2`] = `
<button
  class="sc-jzJRlG bNeKZy"
  data-styletype="secondary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs ijahRT"
    color="yellow"
    data-test="span"
    size="14"
  >
    my secoundrry button
  </span>
</button>
`;

exports[`Button(snapshot testing) yellow Buttons 3`] = `
<button
  class="sc-jzJRlG bNeKZy"
  data-styletype="tertiary"
  data-test="button"
  type="submit"
>
  <span
    class="sc-htoDjs deFOOE"
    color="darkBlue"
    data-test="span"
    size="14"
  >
    my tertiary button
  </span>
</button>
`;
